[project]
name = "kobrafare"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "FareZrextIT", email = "faris.milic11@gmail.com" }
]
dependencies = [
    "pygame>=2.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kobrafare"]
